--- a/index.html
+++ b/index.html
@@ -11,9 +11,95 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="./css/styles.css" />
-    <title>Número aleatorio</title>
+    <title>Tabla de generaciones</title>
   </head>
   <body>
+    <main>
+      <section class="d-flex flex-column justify-content-center">
+        <article class="container mt-2">
+          <h1 class="text-center">Crear persona</h1>
+          <form>
+            <div class="form-group">
+              <label for="name">Nombre</label>
+              <input
+                type="text"
+                class="form-control"
+                id="name"
+                name="name"
+                required
+                maxlength="20"
+              />
+            </div>
+            <div class="form-group">
+              <label for="age">Edad</label>
+              <input
+                type="number"
+                class="form-control"
+                id="age"
+                name="age"
+                required
+              />
+            </div>
+            <div class="form-group">
+              <label for="gender">Sexo</label>
+              <select class="form-control" id="gender" name="gender" required>
+                <option value="Hombre">Hombre</option>
+                <option value="Mujer">Mujer</option>
+                <option value="Otro">Otro</option>
+              </select>
+            </div>
+            <div class="form-group">
+              <label for="weight">Peso</label>
+              <input
+                type="number"
+                class="form-control"
+                id="weight"
+                name="weight"
+                required
+              />
+            </div>
+            <div class="form-group">
+              <label for="height">Altura</label>
+              <input
+                type="number"
+                class="form-control"
+                id="height"
+                name="height"
+                required
+              />
+            </div>
+            <div class="form-group">
+              <label for="dni">DNI</label>
+              <input
+                type="number"
+                class="form-control"
+                id="dni"
+                name="dni"
+                required
+              />
+            </div>
+            <div class="form-group">
+              <label for="yearBirth">Año de Nacimiento</label>
+              <input
+                type="datetime"
+                class="form-control"
+                id="yearBirth"
+                name="yearBirth"
+                required
+              />
+            </div>
+            <button type="submit" class="btn btn-primary">Crear persona</button>
+          </form>
+          <br />
+          <button class="btn btn-success generation-btn">
+            Mostrar generación
+          </button>
+          <button class="btn btn-success age-btn mt-4 mt-md-0">
+            ¿Es mayor de edad?
+          </button>
+        </article>
+      </section>
+    </main>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N"
